# swc-plugin-vue-auto-prop

./: .gitignore  Cargo.toml  package.json
example/: .swcrc  package.json
example/src/: index.ts
example/src/decorators/: Prop.ts
src/: lib.rs
transform/: Cargo.toml
transform/src/: lib.rs
