[package]
name = "swc_plugin_vue_auto_prop"
version = "1.5.7"
edition = "2021"
authors = ["Oskar Lebuda <olebuda@enp.pl>"]
description = "@swc plugin for handling the transformation of @Prop decorator"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
vue_auto_prop = { path = "./transform" }
serde_json = "1.0.117"
swc_core = { version = "0.92.10", features = ["ecma_plugin_transform"] }


[profile.release]
codegen-units = 1
# debug = true
lto = true
opt-level = "s"
strip = "symbols"
