cargo-features = ["edition2024"]

[package]
authors = ["Oskar Lebuda <olebuda@enp.pl>"]
description = "AST Transforms for vue @Prop decorator"
edition = "2024"
license = "MIT"
name = "vue_auto_prop"
version = "0.0.1"

[dependencies]
swc_core = { version = "0.92.10", features = ["ecma_plugin_transform", "trace_macro", "ecma_ast", "__parser"] }
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
wasm-bindgen = "0.2.92"
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
swc_ecma_parser = "0.144.2"
swc_ecma_transforms_testing = "0.141.1"
testing = "0.35.25"